# mint

./: .gitignore  .golangci.yaml  .goreleaser.yaml  .mcp.json  .pre-commit-config.yaml  AGENTS.md  LANGUAGES.md  Makefile  README.ja.md  README.md  README.zh-TW.md  go.mod  go.sum  mise.toml
.claude/: settings.json
.devcontainer/: devcontainer-lock.json  devcontainer.json  post_create.sh
.github/workflows/: codeql.yml  coverage.yml  pr-check.yml  publish-npm.yml  publish-pypi.yml  release.yml
.serena/: project.yml
.serena/memories/: conventions.md  core.md  project-redesign-completion.md  suggested_commands.md  task_completion.md  tech_stack.md
cmd/mint/: main.go  main_signal_test.go  main_test.go
docs/: manual-testing.md  manual-tests.md
internal/gemini/: gemini.go
internal/httpx/: httpx.go  httpx_test.go
internal/llm/: llm.go  writer.go  writer_test.go
internal/provider/: config.go  config_test.go  provider.go
internal/provider/anthropic/: anthropic.go  anthropic_test.go
internal/provider/google/: google.go
internal/provider/googlegenai/: google_genai.go  google_genai_test.go
internal/provider/ollama/: ollama.go
internal/provider/openai/: openai.go  openai_test.go
internal/translator/: translator.go
npm/: build_npm_packages.py
npm/main/: index.js  package.json
npm/mint-ai/: index.js  package.json
npm/mint-ai/scripts/: mint
pypi/: build_wheels.py
pypi/mint/: __main__.py
python/: build_wheels.py  pyproject.toml
python/mint/: __init__.py
script/: install.ps1  install.sh
testdata/: sample.txt
